--- a/package.json
+++ b/package.json
@@ -6,19 +6,32 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint src --ext .ts --ext .tsx",
+    "format": "prettier-eslint \"src/**/*.ts\" \"src/**/*.tsx\" --write"
   },
   "dependencies": {
     "@ant-design/pro-components": "^2.4.4",
-    "antd": "^5.4.2",
+    "antd": "^5.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitejs/plugin-react-swc": "^3.3.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "prettier": "^2.8.7",
+    "prettier-eslint-cli": "^7.1.0",
     "typescript": "^5.0.4",
     "vite": "^4.2.2"
   }
